# fugue-static

./: Cargo.toml  README.md
src/: lib.rs  models.rs  traits.rs  transforms.rs  visualise.rs
src/analyses/: ]  clp.rs  liveness.rs  mod.rs  reaching_definitions.rs
src/analyses/bda/: mod.rs
src/analyses/expressions/: constant.rs  mod.rs  symbolic.rs  var_classes.rs
src/analyses/fixed_point/: mod.rs  stack_pointer_offsets.rs
src/analyses/stack/: mod.rs  offsets.rs  variables.rs
src/analyses/values/: clp.rs  clp_set_composite.rs  finite_set.rs  mod.rs
src/graphs/: algorithms.rs  entity.rs  mod.rs  orders.rs  traversals.rs
src/graphs/algorithms/: dominance.rs  simple_cycles.rs
src/graphs/orders/: po.rs  rpo.rs
src/graphs/traversals/: heuristic.rs  po.rs  rpo.rs  simple.rs
src/graphs/traversals/heuristic/: po.rs  rpo.rs
src/ir/: branch.rs  expr.rs  fmt.rs  insn.rs  location.rs  mod.rs  stmt.rs  types.rs  var.rs
src/models/: block.rs  cdg.rs  cfg.rs  cg.rs  ddg.rs  function.rs  icfg.rs  lifter.rs  memory.rs  phi.rs  program.rs  project.rs  summary.rs  usedef.rs
src/traits/: collect.rs  dominance.rs  ecode.rs  entity.rs  eval.rs  interval.rs  mod.rs  oracle.rs  stmt.rs  variables.rs  visitor.rs  visitor_map.rs  visitor_mut.rs
src/transforms/: egraph.rs  normalise.rs  ssa.rs
src/transforms/ssa/: simple_var.rs
src/types/: entity.rs  id.rs  locatable.rs  mod.rs  variable.rs
tests/: lojax.fdb  sample2.fdb
