[package]
name = "fugue-static"
version = "0.2.14"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2018"

[dependencies]
bincode = "1"
educe = "0.4"
egg = "0.6"
indexmap = "1.7"
fxhash = "0.2"
interval-tree = { version = "0.1", registry = "fugue" }
fixedbitset = "0.4"
fugue = { version = "0.2", registry = "fugue" }
petgraph = "0.6"
simhash = { version = "0.1", registry = "fugue" }
serde = { version = "1", features = ["derive"] }
smallvec = "1"
thiserror = "1"
