[package]
name = "fugue-static"
version = "0.2.33"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2018"

[dependencies]
bincode = "1"
educe = "0.4"
egg = "0.7"
indexmap = "1.7"
fxhash = "0.2"
itertools = "0.10"
intervals = { version = "0.1", registry = "fugue" }
fixedbitset = "0.4"
fugue = { version = "0.2", registry = "fugue" }
parking_lot = "0.11"
petgraph = "0.6"
ron-uuid = "0.4.0"
simhash = { version = "0.1", registry = "fugue" }
serde = { version = "1", features = ["derive"] }
smallvec = "1"
thiserror = "1"
